--- a/TvShows.html
+++ b/TvShows.html
@@ -2,6 +2,11 @@
     <title>Tv Shows</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<style>
+    .article{
+        background-color: blueviolet;
+    }
+</style>
 <body>
     <div class="continer">
     <div class="heading">
